--- a/Pandas/Second_Group_Assignment.ipynb
+++ b/Pandas/Second_Group_Assignment.ipynb
@@ -253,7 +253,7 @@
     "    return debt_summary\n",
     "\n",
     "# Example usage\n",
-    "country = 'Argentina'\n",
+    "country = 'Albania'\n",
     "date = '2017'\n",
     "result = get_debt_summary(df_long, country, date)\n",
     "print(result)\n"
